...
                        style = MaterialTheme.typography.bodyLarge,
                        color = MaterialTheme.colorScheme.onSurfaceVariant,
                    )
                } else {
                    LazyColumn(
                        Modifier.fillMaxWidth().heightIn(max = maxOptionsHeight).padding(top = 8.dp)
                            .testTag("dropdownOptions").selectableGroup(),
                        verticalArrangement = Arrangement.spacedBy(6.dp),
                    ) {
                        items(filteredOptions) { option ->
                            val isSelected = option == selected
                            Surface(
                                modifier = Modifier.fillMaxWidth()
...
